--- a/package.json
+++ b/package.json
@@ -32,9 +32,14 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.4.1",
     "husky": "^0.11.9",
+    "jsdom": "^16.3.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "spotify-wrapper": "^2.1.0"
   }
 }
